# modelgate

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml
.claude/: settings.local.json
.github/workflows/: cd-frontend-ssh.yml  cd-ssh.yml  ci-e2e.yml  ci.yml
archive/original-docs/: one-api-interaction-design.md  one-api-interaction-supplement.md  one-api-product-document.md  one-api-product-supplement.md
deploy/: README_DEPLOY.md  modelgate.service
deploy/api/: init-api-nginx.sh
deploy/frontend/: README_FRONTEND_DEPLOY.md  init-production.sh
docs/: REORGANIZATION.md  development-plan.md  implementation-status.md  index.md
docs/architecture/: api-architecture.md  audit-log-technical-solution.md  frontend-architecture.md  rust-code-architecture.md
docs/development/: api.md  audit-log-implementation.md  changelog.md  deployment.md  e2e-testing-plan.md  frontend-conventions.md  frontend-deployment-plan.md  frontend-development-plan.md  proxy-handler-refactoring.md
e2e/: .gitignore  config.toml  mock-openai-upstream.mjs  run-modelgate-stack.mjs
frontend/: .env.production  .gitignore  eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
migrations/: 0001_create_users.sql  0002_create_audit_logs.sql  0003_users_password_hash.sql  0004_audit_app_finish_reason.sql  0005_api_keys_enhance.sql  0006_api_keys_hash.sql
postman/: ModelGate.postman_collection.json
src/: api_key_policy.rs  audit.rs  auth.rs  config.rs  db.rs  errors.rs  handlers.rs  jwt_session.rs  logging.rs  main.rs  routes.rs  secrets.rs  session_auth.rs  test_utils.rs  upstream.rs
(+61 files in other folders)
