[package]
name = "modelgate"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-service = "2"
actix-http = "3"
actix-cors = "0.7"
bytes = "1"
config = "0.14"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
bcrypt = "0.15"
once_cell = "1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ipnetwork = "0.20"
jsonwebtoken = "9"
async-stream = "0.3"

